[package]
name = "construct-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Construct Team"]
description = "Post-modern QUIC/H3/gRPC transport engine for Construct Messenger"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
name = "construct_engine"

[features]
default = []
# Enable UniFFI bindings for iOS/Android (xcframework build)
ios = ["dep:uniffi"]

[dependencies]
# Crypto core — pure crypto, no network
construct-core = { path = "../construct-core", features = ["post-quantum"] }

# QUIC transport
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"

# TLS 1.3 — rustls with ring backend (Phase 4: swap to aws-lc-rs for X25519Kyber768)
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"
webpki-roots = "0.26"

# Protobuf codec
prost = "0.13"

# Byte buffers and gRPC framing
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# UniFFI scaffolding (only when ios feature is active)
uniffi = { version = "0.30", features = ["build"], optional = true }

# Error handling and logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
http = "1"

# P2P support
stun-client = "0.1"
get_if_addrs = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }
prost-build = "0.13"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
